# mathilde-website

./: .gitignore  README.md  build  combine.yml  combine_static.yml  data.py  metadata.yml  netlify.toml  package-lock.json  package.json  postcss.config.js  pyproject.toml  seo_metadata.yml  tailwind.config.js
content/: _about.md  _cgv.html  _contact.md  _metadata.yml  _pricing.md  _seo_metadata.yml  _services.md  _style.css  base.template.html  cgv.md  cgv.template.html  index.html  page.template.html
content/admin/: config.yml  index.html
content/js/: script.js
content/partials/: _cgv_nav.html  _footer.html  _head.html  _header.html  _nav.html
