[tool.poetry]
name = "static-website"
version = "0.1.0"
description = ""
authors = ["Joachim Jablon <ewjoachim@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
combine = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
